--- a/Web-interface/requirements.txt
+++ b/Web-interface/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.32.0
-pandas==2.2.0
-numpy==1.26.4
-matplotlib==3.8.2
-scikit-learn==1.3.2
-opencv-python-headless==4.8.1.78
-torch==2.2.0
-torchvision==0.17.0
+torch
+torchvision
+scikit-learn
+matplotlib
+seaborn
+tqdm
+opencv-python
+Pillow
+google-colab
